# claude-architect

./: .gitattributes  .gitignore  .mcp.json  CLAUDE.md  CLAUDE.md.example  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COOKBOOK-INDEX.md  COURSE-FLOW.md  EXAM-STUDY-PATH.md  INSTRUCTOR-SETUP.md  PRACTICE-QUESTIONS.md  PRE-CLASS-CHECKLIST.md  README.md  SECURITY.md  SKILL.md  domain-1-agentic.md  domain-2-tools-mcp.md  domain-3-claude-code.md  domain-4-prompts.md  domain-5-context.md  download  hooks-example.py  markdownlint.json  package-lock.json  package.json  practice-questions.json  scenario-cicd-integration.md  settings.json  start-sidecar-group.ps1  stop-sidecar-group.ps1  testing.md  warner-claude-architect-may-2026.pptx
.claude/: settings.json
cca-cert-buddy/: .env.example  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  tsconfig.client.json  tsconfig.json  vite.config.ts
claude-cookbooks-main/: NOTICE.md
docs/: CERT-PROGRAM-BRIEFING.md  COOKBOOK-INDEX.md  EMERGENCY-CARD.md  EXAM-STUDY-PATH.md  INSTRUCTOR-SETUP.md  PRE-CLASS-CHECKLIST.md  domain-1-agentic.md  domain-2-tools-mcp.md  domain-3-claude-code.md  domain-4-prompts.md  domain-5-context.md  scenario-cicd-integration.md
examples/: README.md  first_request.ipynb
images/: social-preview-prompt.md
notebooks/: .gitignore  README.md  cca-f-exam-mastery.ipynb  pyproject.toml  requirements.txt  segment-0-pre-flight.ipynb  segment-1-customer-support-agent.ipynb  segment-2-5-control-surfaces.ipynb  segment-2-tool-design-and-mcp.ipynb  segment-3-invoice-extractor.ipynb  segment-4-cca-f-capstone.ipynb
scripts/: build-deck.py  build-notebooks.py  extract-practice-questions.py  extract-template.py  preflight-class.ps1  preflight.ps1  run-jupyter.ps1  run-mcp-cli.ps1  run-mcp-inspector.ps1  smoke-cookbooks.ps1  stop-jupyter.ps1  voice-lint.ps1
slides/: README.md  warner-claude-architect-july-2026.pptx  (+1 more)
(+84 files in other folders)
